Fix effect toggling alignment

--- a/lightbroom.css
+++ b/lightbroom.css
@@ -59,9 +59,22 @@ html, body {
 	overflow: scroll;
 	background-color: #23262C;
 	box-shadow: 0px 1px 0px 0px rgba(255,255,255,0.30);
-	padding: 14px;
 	font-size: 13px;
 	transition: height 250ms;
+	height: 128px;
+}
+
+#filters > div:first-child{
+	padding-left: 14px;
+}
+
+#filters > div {
+	padding-top: 14px;
+	padding-bottom: 14px;
+}
+
+#filters > div:last-child{
+	padding-right: 14px;
 }
 
 button {
